# beast-mailbox-core

./: AGENT.md  CHANGELOG.md  INTEGRATION_SUMMARY.md  README.md  README_LOCAL_TESTING.md  coverage.xml  pyproject.toml  sonar-project.properties
observatory/: .gitignore  README.md  pyproject.toml
observatory/docker/: docker-compose.yml
observatory/docs/: APPLE_DEVELOPER_EXPERIENCE.md  APPLE_INTELLIGENCE_AGENT_INTEGRATION.md  APPLE_INTELLIGENCE_AS_AGENT.md  APPLE_INTELLIGENCE_BEAST_COHORT.md  APPLE_INTELLIGENCE_INTEGRATION.md  ARCHITECTURE_DESIGN.md  CHAT_UI_OPTIONS.md  LOCAL_SETUP.md  MACOS_SERVICE_MANAGEMENT.md  NO_CHANGE_FRIDAY_NOTE.md  REQUIREMENTS.md  SONARCLOUD_DATA_RETENTION.md  STATUS.md  STRATEGY_SONARCLOUD_VS_PROMETHEUS.md
observatory/python/: README.md  apple_intelligence_agent.py  babel_fish.py  test_babel_fish.py
observatory/scripts/: com.nkllon.beast-observatory-sync.plist  discover_vonnegut.sh  install_sync_service_macos.sh  run_sync_service.sh  setup_local.sh  test_stack.sh
observatory/src/: metrics_consumer.py  sync_service.py
observatory/swift/: .gitignore  .trigger_workflow  1PASSWORD_INTEGRATION.md  APP_STORE_PREP.md  CODE_REVIEW.md  COMMAND_LINE_SUBMISSION.md  CRASH_FIX.md  CREATE_XCODE_PROJECT.md  GET_CREDENTIALS_NOW.md  GET_ISSUER_ID.md  ImplementationPlan.md  Info.plist  LOCAL_TESTING.md  MenuBarApp.swift  NEXT_STEPS.md  NOTES.md  PHASE2_SHORTCUTS.md  Package.swift  QUICKSTART.md  QUICK_SUBMIT.md  QUICK_XCODE_SETUP.md  README.md  RUN_LOCAL.md  SETUP_CREDENTIALS.md  SETUP_SONARCLOUD.md  SONARCLOUD_MIGRATION.md  SONARCLOUD_WALKTHROUGH.md  (+22 more)
(+692 files in other folders)
