[project]
name = "beast-observatory"
version = "0.1.0"
description = "Observatory service for syncing SonarCloud metrics to Prometheus"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "nkllon", email = "noreply@github.com"}
]
keywords = ["observatory", "prometheus", "sonarcloud", "metrics", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "aiohttp>=3.9.0",
    "beast-mailbox-core>=0.4.4",  # For optional mailbox decoupling
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
beast-observatory-sync = "beast_observatory.sync_service:main_cli"
beast-observatory-consumer = "beast_observatory.metrics_consumer:main_cli"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["beast_observatory"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

